--- a/柯里化.md
+++ b/柯里化.md
@@ -24,12 +24,12 @@
         let _args = [...args];
         return foo;
       };
-      foo.prototype.getValue = function(){
+      foo.__proto__.getValue = function(){
         console.log('aaa');
         // return foo._args.reduce((acc, cur) => {
         //   return acc + cur;
         // }, 0);
-      }();
+      };
 
       var f1 = foo(1, 2, 3);
       f1.getValue(); // 6
