--- a/柯里化.md
+++ b/柯里化.md
@@ -37,3 +37,15 @@
       f2.getValue(); // 6
       var f3 = foo(1)(2)(3)(4);
       f3.getValue(); // 10
+      
+      --- 
+      // return和new好像
+      var foo = function (...args) {
+        // 创建数组存储参数
+        let _args = [...args];
+        return foo;
+      };
+      foo.__proto__.f1 = "aa";
+      foo.prototype.f2 = "bb";
+      var foo1 = new foo();
+      var foo2 = foo();
