--- a/柯里化.md
+++ b/柯里化.md
@@ -49,3 +49,16 @@
       foo.prototype.f2 = "bb";
       var foo1 = new foo();
       var foo2 = foo();
+--- 
+```javascript
+            function Foo() {
+                prop0: "prop0";
+            }
+            Foo.prototype.prop1 = "prop1";
+            var foo = new Foo();
+            console.log("Foo", Foo);
+            console.log("Foo.prop0", Foo.prop0);
+            console.log("Foo.prop1", Foo.prop1);
+            console.log("foo.prop0", foo.prop0);
+            console.log("foo.prop1", foo.prop1);
+```
